<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutProfile"
    android:background="@color/red">

    <TextView
        android:id="@+id/about_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/circleImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="182dp"
        android:background="@drawable/bg_profile"
        android:orientation="vertical"
        android:paddingTop="52dp"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/circleImageView">

        <TextView
            android:id="@+id/name_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/name_profile"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_list_food"
            android:elevation="2dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingTop="32dp"
            android:paddingBottom="16dp"
            android:paddingEnd="32dp">

            <Button
                android:id="@+id/gmail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_white"
                android:drawableStart="@drawable/gmail"
                android:drawablePadding="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginBottom="18dp"
                android:text="@string/gmail"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/instagram"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_white"
                android:drawableStart="@drawable/instagram"
                android:drawablePadding="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginBottom="18dp"
                android:text="@string/instagram"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/linkedin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/linkedin"
                android:drawablePadding="12dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:layout_marginBottom="18dp"
                android:textAllCaps="false"
                android:background="@drawable/bg_button_white"
                android:text="@string/linkedin" />

        </LinearLayout>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/bg_photo"
        android:padding="6dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>